--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,9 +5,11 @@
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     
-    <string name="tab_weixin">"微信"</string>
-    <string name="tab_maillist">"通讯录"</string>
-    <string name="tab_found">"发现"</string>
+    <string name="tab_chart">"聊天"</string>
+    <string name="tab_topic">"说说"</string>
+    <string name="tab_circle">"圈子"</string>
     <string name="tab_me">"我"</string>
+    
+    <string name="app_title">"TA说"</string>
 
 </resources>
